--- a/popup/popup.html
+++ b/popup/popup.html
@@ -61,7 +61,18 @@
         <li>The translation/explanation will appear in a popup</li>
       </ol>
     </div>
+
+    <div class="output-section">
+      <h2>Output</h2>
+      <div id="outputText" class="output-box">Your translated or explained text will appear here.</div>
+      <div class="button-group">
+        <button id="copyBtn" class="button">Copy to Clipboard</button>
+        <button id="clearBtn" class="button">Clear</button>
+        <span id="copyMsg" style="display:none; color:green;">Copied!</span>
+      </div>
+    </div>
   </div>
+
   <script src="popup.js"></script>
 </body>
 </html>
