--- a/popup/popup.html
+++ b/popup/popup.html
@@ -51,6 +51,16 @@
       </div>
       <button id="saveSettings" class="button primary">Save Settings</button>
     </div>
+    
+    <!-- Feedback Messages -->
+    <div class="feedback-section">
+      <div id="loadingMessage" style="display: none; color: #555; font-style: italic;">
+        🔄 Translating... Please wait.
+      </div>
+      <div id="errorMessage" style="display: none; color: red; font-weight: bold;">
+        ❌ Error: Something went wrong.
+      </div>
+    </div>
 
     <!-- Instruction Box -->
     <div class="instructions-box">
